# SPOJ

./: .gitignore  CountLetters  main.cpp
AddingBigNumbers/: CMakeLists.txt
AddingBigNumbers/include/: BigInteger.hpp
AddingBigNumbers/src/: BigInteger.cpp  main.cpp
AddingBigNumbers/test/: CMakeLists.txt  Unit_Testing.cpp
BigMultiplication/: CMakeLists.txt  conanfile.txt
BigMultiplication/cmake/tinyxml2/: tinyxml2Targets-debug.cmake  tinyxml2Targets-release.cmake  tinyxml2Targets.cmake
BigMultiplication/include/: BigMultiplier.hpp
BigMultiplication/pkgconfig/: tinyxml2.pc
BigMultiplication/src/: main.cpp
Caesar_Cipher/: CaesarCipher.cpp  CaesarCipher.hpp  main.cpp  makefile
CountLetter/: Just A trial
DeleteComments/: .gitignore  fileReader.cpp  fileReader.h  main.cpp
FloatRepresentation/: CMakeLists.txt
FloatRepresentation/include/: floatRepresentation.hpp
FloatRepresentation/src/: floatRepresentation.cpp  main.cpp
FloatRepresentation/test/: CMakeLists.txt  float_representation_unittest.cpp
Gimnastyk/: Behaviour.cpp  Behaviour.hpp  MaxDistance.cpp  MaxDistance.hpp  main.cpp  makefile
Niekolejne/: main.cpp
NotSoFastMultiplication/: CMakeLists.txt
NotSoFastMultiplication/include/: BigMultiplication.hpp
NotSoFastMultiplication/src/: BigMultiplication.cpp  main.cpp
NotSoFastMultiplication/test/: CMakeLists.txt  Unit_Testing.cpp
PESEL/: main.cpp  pesel.cpp  pesel.hpp
PESEL/peselTest/: pesel.cpp  testPesel.cpp
PointsInRectangle/include/: PointsInTriangle.hpp
PointsInRectangle/src/: PointsInTriangle.cpp  main.cpp
PointsInRectangle/test/: CMakeLists.txt  Unit_Testing.cpp
PointsInTriangle/: CMakeLists.txt
PointsInTriangle/include/: PointsInTriangle.hpp
PointsInTriangle/src/: PointsInTriangle.cpp  main.cpp
PointsInTriangle/test/: CMakeLists.txt
Rolling/: Roll to the left  main.cpp  roll.cpp  roll.hpp
RomanAddition/: .gitignore  CMakeLists.txt
RomanAddition/include/: RomanAddition.hpp
RomanAddition/src/: RomanAddition.cpp  main.cpp
RomanAddition/test/: Unit_Testing.cpp
SimpleNumbersConversion/: CMakeLists.txt
SimpleNumbersConversion/include/: number_converter.hpp
SimpleNumbersConversion/src/: number_converter.cpp
SimpleNumbersConversion/test/: CMakeLists.txt  number_converter_unittest.cpp
SpaceTrimmer/: Main.cpp  MessageTrimmer.cpp  MessageTrimmer.h  ReadMe
ThreePointsOnLine/: example  main.cpp  pointTest.cpp  threePoints.cpp  threePoints.hpp
szyfrowanie/: CMakeLists.txt  szyfrowanie.cpp  szyfrowanie.hpp  szyfrowanie_test.cpp
